<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/btn_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenses"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_savings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savings"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
