<?xml version="1.0" encoding="utf-8"?>
<!-- activity_display_cashflows.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="polarpixel.financeplaner.ViewFinanceIncomeActivity">

    <View
        android:layout_width="16dp"
        android:layout_height="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tracked_income"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <Button
        android:id="@+id/btnChooseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="-38dp"
        android:layout_gravity="top|end" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="300dp"
        tools:itemCount="5"
        tools:listitem="@layout/item_income"/>

    <!-- Cancel Button positioned at the bottom left -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="bottom|start"/>

</LinearLayout>